--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,23 @@ main .component-list .component .workspace .shape-list:nth-of-type(1) {
   background: linear-gradient(rgb(220, 170, 119), rgb(255, 239, 230));
 }
 
+/* ----- button ----- */
+.btn-container {
+  width: 1120px;
+  margin: 16px auto 0;
+}
+.btn-container #dl-btn {
+  all: unset;
+  display: block;
+  padding: 8px 16px;
+  margin-left: auto;
+  border: 1px solid #333;
+  cursor: pointer;
+}
+.btn-container #dl-btn:hover {
+  background: #e2e2e2;
+}
+
 /* ----- action ----- */
 .active {
   background: #e2e2e2;
