--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* ----- style ----- */
 /* ----- common ----- */
 body {
@@ -192,6 +193,157 @@ main .component-list .component .workspace .shape-list:nth-of-type(1) {
 /* ----- action ----- */
 .active {
   background: #e2e2e2;
+}
+
+/* ----- test ----- */
+#test-btn {
+  position: absolute;
+  top: 670px;
+  left: 380px;
+}
+
+.custom-color {
+  background-color: red;
+}
+
+#test-color-picker {
+  border: none;
+  background: none;
+  opacity: 0;
+  cursor: pointer;
+}
+
+#test-color-container {
+  width: 32px;
+  height: 32px;
+  border: 1px solid black;
+  background: pink;
+}
+
+.gnavi {
+  display: flex;
+  flex-wrap: wrap; /*スマホ表示折り返し用なのでPCのみなら不要*/
+  margin: 0 0 50px 0;
+  list-style: none;
+}
+
+.gnavi li a {
+  display: block;
+  padding: 10px 30px;
+  text-decoration: none;
+  color: #333;
+}
+
+.gnavi li {
+  /*線の基点とするためrelativeを指定*/
+  position: relative;
+  margin: 0 10px;
+}
+
+/*線の基点位置*/
+.gnavi li::before,
+.gnavi li::after {
+  content: "";
+  /*絶対配置で線の位置を決める*/
+  position: absolute;
+  background: #0481A2;
+  /*線の形状*/
+  width: 0;
+  height: 1px;
+  /*アニメーションの指定*/
+  transition: all 0.2s linear;
+}
+
+.gnavi li::before {
+  content: "before";
+  right: 0;
+  bottom: 0;
+}
+
+.gnavi li::after {
+  content: "after";
+  left: 0;
+  top: 0;
+}
+
+/*線の基点位置2 spanタグ*/
+.gnavi li span {
+  display: block;
+}
+
+.gnavi li span::before,
+.gnavi li span::after {
+  content: "";
+  /*絶対配置で線の位置を決める*/
+  position: absolute;
+  background: #0481A2;
+  /*線の形状*/
+  width: 3px;
+  height: 0;
+  /*アニメーションの指定*/
+  transition: all 0.1s linear;
+}
+
+.gnavi li span::before {
+  content: "B";
+  left: 0;
+  bottom: 0;
+}
+
+.gnavi li span::after {
+  content: "A";
+  right: 0;
+  top: 0;
+}
+
+/*現在地とhoverした際の線の変化*/
+.gnavi li.current::before,
+.gnavi li.current::after,
+.gnavi li:hover::before,
+.gnavi li:hover::after {
+  width: 100%;
+}
+
+.gnavi li:hover::after {
+  transition-delay: 0s; /*すぐ線を出現させる*/
+}
+
+.gnavi li:hover::before {
+  transition-delay: 0.3s; /*線の出現を0.3秒遅らせる*/
+}
+
+.gnavi li.current span::before,
+.gnavi li.current span::after,
+.gnavi li:hover span::before,
+.gnavi li:hover span::after {
+  height: 100%;
+}
+
+.gnavi li:hover span::before {
+  transition-delay: 0.5s; /*線の出現を0.5秒遅らせる*/
+}
+
+.gnavi li:hover span::after {
+  transition-delay: 0.2s; /*線の出現を0.2秒遅らせる*/
+}
+
+.scroll_bar {
+  background-color: #f0f0f0;
+  overflow-y: scroll;
+  width: 250px;
+  height: 150px;
+}
+
+.scroll_bar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scroll_bar::-webkit-scrollbar-track {
+  background-color: #ccc;
+}
+
+.scroll_bar::-webkit-scrollbar-thumb {
+  background-color: #17585d;
 }
 
 /*# sourceMappingURL=style.css.map */
