--- a/css/style.scss
+++ b/css/style.scss
@@ -141,12 +141,14 @@ main {
               transform: translate(-50%,-50%);
             }
             .comment {
-              width: 36px;
-              height: 16px;
-              background: lightgray;
+              padding: 4px 8px;
+              background: $active-color;
+              border-radius: 8px;
               position: absolute;
-              top: 16px;
-              left: 50px;
+              top: 50px;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              font-size: 10px;
               display: none;
               &.appear {
                 display: block;
@@ -284,6 +286,11 @@ label.active {
   height: 32px;
   border: $border;
   background: pink;
+}
+
+#info-canvas {
+  width: 260px;
+  height: 204px;
 }
 
 // 枠線test ---------------------------------------------------------
