--- a/css/style.css
+++ b/css/style.css
@@ -143,14 +143,17 @@ main .component-list .component .workspace .workspace-top-container .info img {
   transform: translate(-50%, -50%);
 }
 main .component-list .component .workspace .workspace-top-container .info .comment {
+  width: 160px;
+  text-align: center;
   padding: 4px 8px;
   background: #e2e2e2;
   border-radius: 8px;
   position: absolute;
-  top: 50px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 10px;
+  bottom: 150px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  font-size: 11px;
   display: none;
 }
 main .component-list .component .workspace .workspace-top-container .info .comment.appear {
