--- a/css/style.scss
+++ b/css/style.scss
@@ -163,25 +163,25 @@ main {
               @include box-center;
               top: 8px;
               text-align: center;
-              display: none;
-              &.appear {
-                display: block;
-              }
+              // display: none;
+              // &.appear {
+              //   display: block;
+              // }
             }
-            .comment {
-              width: fit-content;
-              padding: 4px 8px;
-              border-radius: 8px;
-              background: $active-color;
-              @include box-center;
-              bottom: 150px;
-              text-align: center;
-              font-size: 11px;
-              display: none;
-              &.appear {
-                display: block;
-              }
-            }
+            // .comment {
+            //   width: fit-content;
+            //   padding: 4px 8px;
+            //   border-radius: 8px;
+            //   background: $active-color;
+            //   @include box-center;
+            //   bottom: 150px;
+            //   text-align: center;
+            //   font-size: 11px;
+            //   display: none;
+            //   &.appear {
+            //     display: block;
+            //   }
+            // }
           }
         }
         
